--- a/index.html
+++ b/index.html
@@ -24,34 +24,87 @@
 </head>
 
 <body>
+  <main>
+    <section class="summary-section">
+      <div class="container">
 
-  Your Result
-  76
-  of 100
+        <div class="flex results-box">
+          <h2 class="box-heading">
+            Your Result
+          </h2>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+          <div class="result-circle">
+            <span class="score-number">76</span>
+            of 100
+          </div>
+          <p class="score-rating">Great</p>
+          <p class="score-comment">
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </div>
 
-  Summary
+        <div class="flex summary-box">
+          <h2 class="box-heading">
+            Summary
+          </h2>
 
-  Reaction
-  80 / 100
+          <div class="categories-box">
 
-  Memory
-  92 / 100
+            <div class="category-box category-reaction">
+              <div class="category">
+                <img src="assets/images/icon-reaction.svg" alt="" class="category-icon">
+                <span>
+                  Reaction
+                </span>
+              </div>
+              <p class="category-score"><span>80</span> / 100</p>
+            </div>
 
-  Verbal
-  61 / 100
+            <div class="category-box category-memory">
+              <div class="category">
+                <img src="assets/images/icon-memory.svg" alt="" class="category-icon">
+                <span>
+                  Memory
+                </span>
+              </div>
+              <p class="category-score"><span>92</span> / 100</p>
+            </div>
 
-  Visual
-  72 / 100
+            <div class="category-box category-verbal">
+              <div class="category">
+                <img src="assets/images/icon-verbal.svg" alt="" class="category-icon">
+                <span>
+                  Verbal
+                </span>
+              </div>
+              <p class="category-score"><span>61</span> / 100</p>
+            </div>
 
-  Continue
+            <div class="category-box category-visual">
+              <div class="category">
+                <img src="assets/images/icon-visual.svg" alt="" class="category-icon">
+                <span>
+                  Visual
+                </span>
+              </div>
+              <p class="category-score"><span>72</span> / 100</p>
+            </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+          </div>
+
+          <a href="" class="button">
+            Continue
+          </a>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
+  <!-- <div class="attribution"> -->
+  <!--   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. -->
+  <!--   Coded by <a href="#">Your Name Here</a>. -->
+  <!-- </div> -->
 </body>
 
 </html>
