--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/queries.css">
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
-      font-size: 11px;
+      font-size: 1.8rem;
       text-align: center;
     }
 
@@ -101,10 +102,10 @@
     </section>
   </main>
 
-  <!-- <div class="attribution"> -->
-  <!--   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. -->
-  <!--   Coded by <a href="#">Your Name Here</a>. -->
-  <!-- </div> -->
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/armandosrocha">Armando Rocha</a>.
+  </div>
 </body>
 
 </html>
