--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
   </main>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/results-summary-component-CE_K6s0maV"
+      target=" _blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/armandosrocha">Armando Rocha</a>.
   </div>
 </body>
